--- a/experiments/deep_retrieval.ipynb
+++ b/experiments/deep_retrieval.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,6 +49,7 @@
     "sys.path.append(\"..\")\n",
     "sys.dont_write_bytecode = True\n",
     "\n",
+    "import os\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "import tensorflow_datasets as tfds\n",
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,8 +312,17 @@
    ]
   },
   {
+   "source": [
+    "## 数据准备\n",
+    "\n",
+    "将数据集分割为训练集和测试集。"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,30 +337,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "WARNING:tensorflow:Using a while_loop for converting BoostedTreesBucketize\n",
-      "WARNING:tensorflow:Using a while_loop for converting BoostedTreesBucketize\n",
-      "WARNING:tensorflow:Using a while_loop for converting BoostedTreesBucketize\n",
-      "WARNING:tensorflow:Using a while_loop for converting BoostedTreesBucketize\n",
-      "WARNING:tensorflow:Using a while_loop for converting BoostedTreesBucketize\n",
-      "WARNING:tensorflow:Using a while_loop for converting BoostedTreesBucketize\n",
-      "WARNING:tensorflow:Using a while_loop for converting BoostedTreesBucketize\n",
-      "WARNING:tensorflow:Using a while_loop for converting BoostedTreesBucketize\n",
-      "Top-100 accuracy: 0.27.\n"
-     ]
-    }
+   "source": [
+    "## 模型训练\n",
+    "\n",
+    "优化器采用Adagrad，学习率0.1。\n",
+    "\n",
+    "### 训练单层dnn的Movielens检索模型\n",
+    "\n",
+    "Embedding => 32"
    ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "num_epochs = 300\n",
     "\n",
-    "# 单层模型\n",
     "model = MovielensModel([32])\n",
     "model.compile(optimizer=tf.keras.optimizers.Adagrad(0.1))\n",
     "\n",
@@ -362,8 +368,19 @@
     "    verbose=0)\n",
     "\n",
     "accuracy = one_layer_history.history[\"val_factorized_top_k/top_100_categorical_accuracy\"][-1]\n",
-    "print(f\"Top-100 accuracy: {accuracy:.2f}.\")"
+    "print(f\"Top-100 accuracy: {accuracy:.2f}.\")\n",
+    "\n",
+    "# Top-100 accuracy = 0.27"
    ]
+  },
+  {
+   "source": [
+    "### 训练2层dnn的Movielens检索模型\n",
+    "\n",
+    "\bEmbedding => 64 => Relu => 32"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -371,7 +388,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2层模型\n",
     "model = MovielensModel([64, 32])\n",
     "model.compile(optimizer=tf.keras.optimizers.Adagrad(0.1))\n",
     "\n",
@@ -383,8 +399,19 @@
     "    verbose=0)\n",
     "\n",
     "accuracy = two_layer_history.history[\"val_factorized_top_k/top_100_categorical_accuracy\"][-1]\n",
-    "print(f\"Top-100 accuracy: {accuracy:.2f}.\")"
+    "print(f\"Top-100 accuracy: {accuracy:.2f}.\")\n",
+    "\n",
+    "# Top-100 accuracy = 0.28"
    ]
+  },
+  {
+   "source": [
+    "### 训练3层dnn的Movielens检索模型\n",
+    "\n",
+    "Embedding => 128 => Relu => 64 => Relu => 32"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -392,7 +419,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3层模型\n",
     "model = MovielensModel([128, 64, 32])\n",
     "model.compile(optimizer=tf.keras.optimizers.Adagrad(0.1))\n",
     "\n",
@@ -404,8 +430,17 @@
     "    verbose=0)\n",
     "\n",
     "accuracy = three_layer_history.history[\"val_factorized_top_k/top_100_categorical_accuracy\"][-1]\n",
-    "print(f\"Top-100 accuracy: {accuracy:.2f}.\")"
+    "print(f\"Top-100 accuracy: {accuracy:.2f}.\")\n",
+    "\n",
+    "# Top-100 accuracy = 0.22"
    ]
+  },
+  {
+   "source": [
+    "## 训练可视化"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -413,17 +448,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_validation_runs = len(two_layer_history.history[\"val_factorized_top_k/top_100_categorical_accuracy\"])\n",
-    "epochs = [(x + 1)* 5 for x in range(num_validation_runs)]\n",
+    "png_export_dir = os.path.join(\"assets\", \"deep_retrieval\")\n",
     "\n",
-    "plt.plot(epochs, one_layer_history.history[\"val_factorized_top_k/top_100_categorical_accuracy\"], label=\"1 layer\")\n",
-    "plt.plot(epochs, two_layer_history.history[\"val_factorized_top_k/top_100_categorical_accuracy\"], label=\"2 layers\")\n",
-    "plt.plot(epochs, three_layer_history.history[\"val_factorized_top_k/top_100_categorical_accuracy\"], label=\"3 layers\")\n",
-    "plt.title(\"Accuracy vs epoch\")\n",
-    "plt.xlabel(\"epoch\")\n",
-    "plt.ylabel(\"Top-100 accuracy\");\n",
-    "plt.legend()\n",
-    "plt.show()"
+    "if not os.path.exists(png_export_dir):\n",
+    "    os.makedirs(png_export_dir)\n",
+    "\n",
+    "for k in [1, 5, 10, 50, 100]:\n",
+    "    num_validation_runs = len(two_layer_history.history[f\"val_factorized_top_k/top_{k}_categorical_accuracy\"])\n",
+    "    epochs = [(x + 1)* 5 for x in range(num_validation_runs)]\n",
+    "\n",
+    "    plt.plot(epochs, one_layer_history.history[f\"val_factorized_top_k/top_{k}_categorical_accuracy\"], label=\"1 layer\")\n",
+    "    plt.plot(epochs, two_layer_history.history[f\"val_factorized_top_k/top_{k}_categorical_accuracy\"], label=\"2 layers\")\n",
+    "    plt.plot(epochs, three_layer_history.history[f\"val_factorized_top_k/top_{k}_categorical_accuracy\"], label=\"3 layers\")\n",
+    "    plt.title(\"Accuracy vs epoch\")\n",
+    "    plt.xlabel(\"epoch\")\n",
+    "    plt.ylabel(f\"Top-{k} accuracy\");\n",
+    "    plt.legend()\n",
+    "    plt.savefig(os.path.join(png_export_dir, f\"top_{k}_accuracy.png\"))\n",
+    "    plt.show()"
    ]
   }
  ]
