--- a/experiments/transformer.ipynb
+++ b/experiments/transformer.ipynb
@@ -32,14 +32,14 @@
     "\n",
     "Attention Is All You Need\n",
     "\n",
-    "https://arxiv.org/abs/1706.03762\n"
+    "https://arxiv.org/abs/1706.03762"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,8 +53,17 @@
    ]
   },
   {
+   "source": [
+    "## 数据准备\n",
+    "\n",
+    "imdb数据集的预处理和分割"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,18 +80,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "WARNING:tensorflow:From /Users/wangyao/anaconda3/lib/python3.7/site-packages/tensorflow/python/ops/linalg/linear_operator_lower_triangular.py:167: calling LinearOperator.__init__ (from tensorflow.python.ops.linalg.linear_operator) with graph_parents is deprecated and will be removed in a future version.\nInstructions for updating:\nDo not pass `graph_parents`.  They will  no longer be used.\n"
-     ]
-    }
+   "source": [
+    "## 构建模型\n",
+    "\n",
+    "encoder_inputs, decoder_inputs => Transformer => GlobalAveragePooling => Dense(2)\n"
    ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "model_dim = 8\n",
     "batch_size = 128\n",
@@ -107,27 +117,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'EarlyStopping' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-bb1781dc0929>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mEarlyStopping\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpatience\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m model.fit([x_train, x_train_masks], y_train, \n\u001b[1;32m      3\u001b[0m     batch_size=batch_size, epochs=epochs, validation_split=0.2, callbacks=[es])\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'EarlyStopping' is not defined"
-     ]
-    }
-   ],
    "source": [
-    "es = tf.keras.callbacks.EarlyStopping(patience=3)\n",
+    "## 模型训练\n",
+    "\n",
+    "使用早停防止过拟合。"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "es = EarlyStopping(patience=3)\n",
     "model.fit([x_train, x_train_masks], y_train, \n",
     "    batch_size=batch_size, epochs=epochs, validation_split=0.2, callbacks=[es])"
    ]
+  },
+  {
+   "source": [
+    "## 模型评估"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
