Fix class paths

--- a/experiments/gcn.ipynb
+++ b/experiments/gcn.ipynb
@@ -56,7 +56,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from sklearn.manifold import TSNE\n",
-    "from deep_recommenders.layers.gnn import GCN"
+    "from deep_recommenders.keras.retrieval import GCN"
    ]
   },
   {
