--- a/experiments/transformer.ipynb
+++ b/experiments/transformer.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "import tensorflow as tf\n",
     "\n",
-    "from deep_recommenders.layers.nlp.transformer import Transformer"
+    "from deep_recommenders.keras.models.nlp import Transformer"
    ]
   },
   {
