fixes #12 , for the params error

--- a/experiments/transformer.ipynb
+++ b/experiments/transformer.ipynb
@@ -27,6 +27,7 @@
  "nbformat_minor": 2,
  "cells": [
   {
+   "cell_type": "markdown",
    "source": [
     "# Transformer 模型\n",
     "\n",
@@ -34,125 +35,124 @@
     "\n",
     "https://arxiv.org/abs/1706.03762"
    ],
-   "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append(\"..\")\n",
-    "sys.dont_write_bytecode = True\n",
-    "\n",
-    "import tensorflow as tf\n",
-    "\n",
+    "import sys\r\n",
+    "sys.path.append(\"..\")\r\n",
+    "sys.dont_write_bytecode = True\r\n",
+    "\r\n",
+    "import tensorflow as tf\r\n",
+    "\r\n",
     "from deep_recommenders.keras.models.nlp import Transformer"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
+   "cell_type": "markdown",
    "source": [
     "## 数据准备\n",
     "\n",
     "imdb数据集的预处理和分割"
    ],
-   "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "vocab_size = 5000\n",
-    "max_len = 256\n",
-    "\n",
-    "(x_train, y_train), (x_test, y_test) = tf.keras.datasets.imdb.load_data(maxlen=max_len, num_words=vocab_size)\n",
-    "x_train = tf.keras.preprocessing.sequence.pad_sequences(x_train, maxlen=max_len)\n",
-    "x_test = tf.keras.preprocessing.sequence.pad_sequences(x_test, maxlen=max_len)\n",
-    "x_train_masks = tf.equal(x_train, 0)\n",
-    "x_test_masks = tf.equal(x_test, 0)\n",
-    "y_train = tf.keras.utils.to_categorical(y_train)\n",
+    "vocab_size = 5000\r\n",
+    "max_len = 256\r\n",
+    "\r\n",
+    "(x_train, y_train), (x_test, y_test) = tf.keras.datasets.imdb.load_data(maxlen=max_len, num_words=vocab_size)\r\n",
+    "x_train = tf.keras.preprocessing.sequence.pad_sequences(x_train, maxlen=max_len)\r\n",
+    "x_test = tf.keras.preprocessing.sequence.pad_sequences(x_test, maxlen=max_len)\r\n",
+    "x_train_masks = tf.equal(x_train, 0)\r\n",
+    "x_test_masks = tf.equal(x_test, 0)\r\n",
+    "y_train = tf.keras.utils.to_categorical(y_train)\r\n",
     "y_test = tf.keras.utils.to_categorical(y_test)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
+   "cell_type": "markdown",
    "source": [
     "## 构建模型\n",
     "\n",
     "encoder_inputs, decoder_inputs => Transformer => GlobalAveragePooling => Dense(2)\n"
    ],
-   "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "model_dim = 8\n",
-    "batch_size = 128\n",
-    "epochs = 10\n",
-    "\n",
-    "encoder_inputs = tf.keras.Input(shape=(max_len,), name='encoder_inputs')\n",
-    "decoder_inputs = tf.keras.Input(shape=(max_len,), name='decoder_inputs')\n",
-    "outputs = Transformer(\n",
-    "    vocab_size, \n",
-    "    model_dim, \n",
-    "    n_heads=2, \n",
-    "    encoder_stack=2,\n",
-    "    decoder_stack=2, \n",
-    "    feed_forward_size=50\n",
-    ")([encoder_inputs, decoder_inputs])\n",
-    "outputs = tf.keras.layers.GlobalAveragePooling1D()(outputs)\n",
-    "outputs = tf.keras.layers.Dense(2, activation='softmax')(outputs)\n",
-    "model = tf.keras.Model(inputs=[encoder_inputs, decoder_inputs], outputs=outputs)\n",
-    "\n",
-    "model.compile(optimizer=tf.keras.optimizers.Adam(beta_1=0.9, beta_2=0.98, epsilon=1e-9), \n",
+    "model_dim = 8\r\n",
+    "batch_size = 128\r\n",
+    "epochs = 10\r\n",
+    "\r\n",
+    "encoder_inputs = tf.keras.Input(shape=(max_len,), name='encoder_inputs')\r\n",
+    "decoder_inputs = tf.keras.Input(shape=(max_len,), name='decoder_inputs')\r\n",
+    "outputs = Transformer(\r\n",
+    "    vocab_size, \r\n",
+    "    model_dim, \r\n",
+    "    n_heads=2, \r\n",
+    "    encoder_stack=2,\r\n",
+    "    decoder_stack=2, \r\n",
+    "    feed_forward_size=50\r\n",
+    ")(encoder_inputs, decoder_inputs)\r\n",
+    "outputs = tf.keras.layers.GlobalAveragePooling1D()(outputs)\r\n",
+    "outputs = tf.keras.layers.Dense(2, activation='softmax')(outputs)\r\n",
+    "model = tf.keras.Model(inputs=[encoder_inputs, decoder_inputs], outputs=outputs)\r\n",
+    "\r\n",
+    "model.compile(optimizer=tf.keras.optimizers.Adam(beta_1=0.9, beta_2=0.98, epsilon=1e-9), \r\n",
     "    loss='categorical_crossentropy', metrics=['accuracy'])"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
+   "cell_type": "markdown",
    "source": [
     "## 模型训练\n",
     "\n",
     "使用早停防止过拟合。"
    ],
-   "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "es = EarlyStopping(patience=3)\n",
-    "model.fit([x_train, x_train_masks], y_train, \n",
+    "es = EarlyStopping(patience=3)\r\n",
+    "model.fit([x_train, x_train_masks], y_train, \r\n",
     "    batch_size=batch_size, epochs=epochs, validation_split=0.2, callbacks=[es])"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
+   "cell_type": "markdown",
    "source": [
     "## 模型评估"
    ],
-   "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "test_metrics = model.evaluate([x_test, x_test_masks], y_test, batch_size=batch_size, verbose=0)\n",
     "print(\"loss on Test: %.4f\" % test_metrics[0])\n",
     "print(\"accu on Test: %.4f\" % test_metrics[1])"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ]
 }
